# ZenWatch

./: .env.docker  .env.example  .gitignore  COMPONENT_HIERARCHY.md  FRONTEND_REDESIGN_SUMMARY.md  PORTS_MANAGEMENT.md  QUICKSTART.md  README.md  SCRAPER_CONFIGURATION.md  SCRAPER_SESSION_SUMMARY.md  TASK.md  TESTING_GUIDE.md  docker-compose.yml
backend/: .env.example  CELERY_SETUP.md  Dockerfile  SCRAPING_SYSTEM.md  celerybeat-schedule  pyproject.toml  test_celery_scraping.py  test_scraper.py
backend/alembic/: env.py
backend/alembic/versions/: 017d00fa9777_merge_parallel_auth_migrations.py  2d39bc6138ce_fix_youtube_is_video_flag.py  34095333bbd0_add_youtube_channels_table.py  54deecb1beb5_add_articles_table.py  6a2a33a30b04_add_user_auth_tables.py  76bdfd8b571f_add_library_triage_fields.py  8aff7deaacd5_add_scraping_runs_table.py  957bd231a672_add_video_fields_to_articles.py  a1b2c3d4e5f6_add_user_auth_and_comments_tables.py  bc8ef769a0c9_add_sources_table.py  c2a82ac4fde2_add_user_article_scores_table.py  d9e2f5a7b3c4_fix_sources_unique_constraint.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  analytics.py  articles.py  auth.py  comments.py  keywords.py  library.py  personalized.py  scraping.py  triage.py  user_keywords.py  users.py  videos.py  youtube.py
backend/app/auth/: __init__.py  deps.py  jwt.py  oauth.py  password.py
backend/app/models/: __init__.py  article.py  article_keyword.py  comment.py  consent.py  keyword.py  scraping_run.py  source.py  trend.py  user.py  user_article_score.py  user_config.py  user_keyword.py  user_state.py  youtube_channel.py
backend/app/nlp/: __init__.py  scorer.py  summarizer.py
backend/app/schemas/: __init__.py  analytics.py  (+9 more)
backend/tests/: conftest.py
(+208 files in other folders)
